지금까지 한 거 잘 모르겠다.

--- a/templates/freeboards/listSearchedSpecificPage.html
+++ b/templates/freeboards/listSearchedSpecificPage.html
@@ -1,4 +1,4 @@
-{% extends "freeboards/freeboards_base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
   <table class="table" cellspacing=1 width=700 border=0>
