--- a/templates/wiki/search.html
+++ b/templates/wiki/search.html
@@ -16,7 +16,7 @@
 		<div>
 			<a href="/sle/wiki/page/{{page_data.page_name}}/"><h3>{{page_data.page_name}}</h3></a>
 			<br />
-			{{page_data.content}}
+			<!-- {{page_data.content}} -->
 		</div>
 		<hr />	
 		{% endautoescape %}
