--- a/templates/base.html
+++ b/templates/base.html
@@ -22,12 +22,14 @@
   </head>
   <body>
     <div id="navbar">
-    	{% include "main/navbar.html" %}
+    	{% include "navbar/navbar.html" %}
     </div>
 
-    <div id="content">
-      {% block content %}
-      {% endblock %}
+    <div class="container">
+      <div id="content">
+        {% block content %}
+        {% endblock %}
+      </div>
     </div>
 
   </body>
