--- a/templates/freeboards/freeboards_base.html
+++ b/templates/freeboards/freeboards_base.html
@@ -14,11 +14,12 @@
         <title>{% block title %}{% endblock %}</title>
         <script src="{% static "bootstrap/js/jquery.js" %}"></script>
         <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+        <script src="{% static "bootstrap/js/transition.js" %}"></script>
         {% block header %}{% endblock %}
 	</head>
 
 	<body>
-		{% include "main/base.html" %}
+		{% include "base.html" %}
 		<br>
 		<div class="container">
 			{% block content %}
