--- a/templates/freeboards/listSpecificPage.html
+++ b/templates/freeboards/listSpecificPage.html
@@ -1,25 +1,27 @@
-{% extends "freeboards/freeboards_base.html" %}
+{% extends "base.html" %}
 {% block title %} Freeboards {% endblock %}
 {% block content %}
-<table class="table" cellspacing=1 width=700 border=0>
+<table class="table" cellspacing="1" width="700px" border="0">
     <tr>
         <td>Total writings: {{ totalCnt }}</td>
         <td><p align=right> Page:{{ currentPage }}</td>
     </tr>
 </table>
 
-<table class="table" cellspacing=1 width=700 border=1>
+<table class="table table-hover" cellspacing="1" width="700px" border="1">
+    <thead>
     <tr>
-        <td width=50><p align=center>No.</p></td>
-        <td width=80><p align=center>Category</p></td>
-        <td width=320><p align=center>Title</p></td>
-        <td width=80><p align=center>Writer</p></td>
-        <td width=80><p align=center>Date</p></td>
-        <td width=80><p align=center>Hits</p></td>
+        <th width=50><p align=center>No.</p></th>
+        <th width=80><p align=center>Category</p></th>
+        <th width=320><p align=center>Title</p></th>
+        <th width=80><p align=center>Writer</p></th>
+        <th width=80><p align=center>Date</p></th>
+        <th width=80><p align=center>Hits</p></th>
     </tr>
-
+    </thead>
+    <tbody>
     {% if boardList %}
-        <ul>
+      
             {% for boardRow in boardList %}
             <tr>
             <td width=50><p align=center>{{ boardRow.id }}</p></td>
@@ -34,18 +36,19 @@
             <td width=80><p align=center>{{ boardRow.hits }}</p></td>
             </tr>
             {% endfor %}
-        </ul>
+        
     {% else %}
         <p></p>
     {% endif %}
+    </tbody>
 </table>
 
-<table class="table" cellspacing=1 width=700 border=1 >
+<table class="table" cellspacing="1" width="700px" border="1" >
     <tr> <td>
         {% for page in totalPageList %}
             <a href="/sle/freeboards/listSpecificPageWork?currentPage={{page}}" >
                 [
-                    {% if page == currentPage  %}
+                    {% if page == currentPage %}
                         <b>
                     {% endif %}
                         {{ page }}
@@ -58,15 +61,16 @@
         </td> </tr>
 </table>
 
-<table class="table" width=700>
+<table class="table" width="700px">
     <tr>
-        <td><input type=button value="Write"  OnClick="window.location='/sle/freeboards/showWriteForm'">    </td>
+        <td><input type=button value="Write" class="btn btn-default" role="button" OnClick="window.location='/sle/freeboards/showWriteForm'">    </td>
         
-        <td><form name=searchf method=post action="/sle/freeboards/searchWithSubject/">
+        <td><form class="form-inline" name=searchf method=post action="/sle/freeboards/searchWithSubject/">
             <p align=right>
-            <input type=text name=searchStr size=50  maxlength=50>
-            <input type=submit value="Search">
+            <input type=text class="form-control" name=searchStr maxlength=50  style="display:inline;">
+            <input type=submit class="btn btn-default" role="button" value="Search" style="display:inline;">
             </p>
+            </form>
         </td>
     </tr>
 </table>
